--- a/Kyiv spelling trends visualization.ipynb
+++ b/Kyiv spelling trends visualization.ipynb
@@ -788,7 +788,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instances of the Ukrainian spelling are concentrated at times when conflict in Kyiv and other parts of Ukraine is in the news. During these periods, Ukrainians and their supporters are informing the world about the conflict they are facing and how to show solidarity when writing about it. The uptick of use of the Ukrainian spelling in February of 2022 in the highest rated Reddit comments reflects efforts by Redditors to use the platform as a way to show solidarity with Ukraine and stand against the war. The use of written convention online to express support for a global social movement is one of the internet's major implications on language use."
+    "Instances of the Ukrainian spelling are concentrated at times when conflict in Kyiv and other parts of Ukraine is in the news. During these periods, Ukrainians and their supporters are informing the world about the conflict they are facing and how to show solidarity when writing and speaking about it. The uptick of use of the Ukrainian spelling in February of 2022 in the highest rated Reddit comments reflects efforts by Redditors to use the platform as a way to show solidarity with Ukraine and stand against the war. The use of written convention online to express support for a global social movement is one of the internet's major implications on language use."
    ]
   },
   {
